# MessageParser

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_parser.sh
src/app/: __init__.py  bot.py  loader.py
src/parsers/: __init__.py  image_parser.py
src/utils/: saver.py
static/: run.py
