[tool.poetry]
name = "messageparser"
version = "0.1.0"
description = "Parser for messenger/url messages"
authors = ["maltsevd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
ndg-httpsclient = "^0.5.1"
urllib3 = "^2.1.0"
aiogram = "^3.2.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
